<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="Contact_Us">Contact us</string>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_home_description_format">%1$s, %2$s</string>
    <string name="abc_action_bar_home_subtitle_description_format">%1$s, %2$s, %3$s</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_font_family_body_1_material">sans-serif</string>
    <string name="abc_font_family_body_2_material">sans-serif-medium</string>
    <string name="abc_font_family_button_material">sans-serif-medium</string>
    <string name="abc_font_family_caption_material">sans-serif</string>
    <string name="abc_font_family_display_1_material">sans-serif</string>
    <string name="abc_font_family_display_2_material">sans-serif</string>
    <string name="abc_font_family_display_3_material">sans-serif</string>
    <string name="abc_font_family_display_4_material">sans-serif-light</string>
    <string name="abc_font_family_headline_material">sans-serif</string>
    <string name="abc_font_family_menu_material">sans-serif</string>
    <string name="abc_font_family_subhead_material">sans-serif</string>
    <string name="abc_font_family_title_material">sans-serif-medium</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="about_jain_doodh">About Jain Doodh</string>
    <string name="account">Account</string>
    <string name="add">Add</string>
    <string name="add_milk">Add Milk</string>
    <string name="add_milk_btn">Add Milk</string>
    <string name="address">Addresss</string>
    <string name="app_name">JainDoodhBhandaaran</string>
    <string name="cancel">Cancel</string>
    <string name="change_password">Change Password</string>
    <string name="confirm_password">Enter confirm password</string>
    <string name="customer_record">Customer Record</string>
    <string name="dashboard">Dashboard</string>
    <string name="done">Done</string>
    <string name="edit">Edit</string>
    <string name="email">Email</string>
    <string name="empty_address">Please enter the address</string>
    <string name="empty_confirmPassword">Please enter the confirm password</string>
    <string name="empty_email">Please enter the email</string>
    <string name="empty_firstName">Please enter the first name</string>
    <string name="empty_lastName">Please enter the last name</string>
    <string name="empty_message">Please enter the message</string>
    <string name="empty_milk_price">Please write here milk price</string>
    <string name="empty_milk_qty">Please write here milk qty</string>
    <string name="empty_mobile_number">Please enter the mobile number</string>
    <string name="empty_newPassword">Please enter the new password</string>
    <string name="empty_oldPassword">Please enter the old password</string>
    <string name="empty_password">Please enter the password</string>
    <string name="empty_rating">Please select the rating</string>
    <string name="empty_title">Please enter the title</string>
    <string name="enter_message">Enter message</string>
    <string name="enter_title">Enter title</string>
    <string name="faq">FAQ</string>
    <string name="feedback">Feedback</string>
    <string name="feedback_text">How do you like your</string>
    <string name="feedback_text1">Jain Doodh Bhandaar app so far</string>
    <string name="firstName">First name</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="gram">Gram(gm)</string>
    <string name="internet_connection_message">No internet connection. \nPlease check your connection setting and try again</string>
    <string name="lastName">Last name</string>
    <string name="litre">In Litre</string>
    <string name="login">LOG IN</string>
    <string name="logout">Logout</string>
    <string name="logout_message">Are you sure you want to logout?</string>
    <string name="message">Message</string>
    <string name="millilitre">Millilitre</string>
    <string name="missmatch_password">Your password and confirmation password do not match.</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="name">Name</string>
    <string name="new_password">Enter new password</string>
    <string name="ok">Ok</string>
    <string name="old_password">Enter old password</string>
    <string name="password">Password</string>
    <string name="payNow">Pay now</string>
    <string name="price">Price</string>
    <string name="privacyPolicy">Privacy policy</string>
    <string name="profile">Profile</string>
    <string name="qrScan">Scan</string>
    <string name="qty">Qty</string>
    <string name="rate_us">Rate us</string>
    <string name="report">Report</string>
    <string name="search_menu_title">Search</string>
    <string name="setting">Setting</string>
    <string name="status_bar_notification_info_overflow">999+</string>
    <string name="syncs">Syncs</string>
    <string name="uidai">UIDAI</string>
    <string name="user_name">User Name</string>
    <string name="work">Work</string>
</resources>
