<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" android:orientation="vertical" android:background="@color/white" android:layout_width="match_parent" android:layout_height="match_parent" android:minWidth="300dp">
    <TextView android:textSize="@dimen/textsize_20" android:textColor="@color/blue_fun_shades" android:gravity="top|bottom|left|right|center_vertical|fill_vertical|center_horizontal|fill_horizontal|center|fill|start|end" android:padding="@dimen/margin_5" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/logout" />
    <TextView android:textSize="@dimen/textsize_16" android:textColor="@color/black_medium" android:gravity="top|bottom|left|right|center_vertical|fill_vertical|center_horizontal|fill_horizontal|center|fill|start|end" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/margin_10" android:text="@string/logout_message" />
    <LinearLayout android:orientation="horizontal" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/margin_20" android:layout_marginBottom="@dimen/margin_20">
        <Button android:textColor="@color/white" android:id="@+id/logout_cancel" android:background="@drawable/login_drawable" android:layout_width="UNKNOWN_DATA_0x1" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/margin_5" android:layout_marginRight="@dimen/margin_5" android:text="@string/cancel" android:layout_weight="1.0" />
        <Button android:textColor="@color/white" android:id="@+id/logout_done" android:background="@drawable/login_drawable" android:layout_width="UNKNOWN_DATA_0x1" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/margin_5" android:layout_marginRight="@dimen/margin_5" android:text="@string/ok" android:layout_weight="1.0" />
    </LinearLayout>
</LinearLayout>
