<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" android:orientation="vertical" android:background="@color/white" android:layout_width="match_parent" android:layout_height="match_parent">
    <TextView android:textSize="@dimen/textsize_16" android:textColor="@color/white" android:gravity="top|bottom|left|right|center_vertical|fill_vertical|center_horizontal|fill_horizontal|center|fill|start|end" android:layout_gravity="top|bottom|left|right|center_vertical|fill_vertical|center_horizontal|fill_horizontal|center|fill|start|end" android:background="@color/blue_pelorus" android:layout_width="match_parent" android:layout_height="wrap_content" android:minHeight="?unknown_attr_ref: 10102eb" android:text="@string/customer_record" />
    <android.support.v4.widget.NestedScrollView android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/margin_5">
        <LinearLayout android:orientation="vertical" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/margin_15" android:layout_marginRight="@dimen/margin_15">
            <EditText android:textColor="@color/blue_fun_shades" android:textColorHint="@color/blue_fun_shades" android:id="@+id/customer_name" android:background="@drawable/shadow_white" android:padding="@dimen/margin_10" android:layout_width="match_parent" android:layout_height="wrap_content" android:hint="@string/name" android:inputType="text|textCapCharacters|textCapWords|textCapSentences|textAutoCorrect|textAutoComplete|textMultiLine|textImeMultiLine|textNoSuggestions|textUri|textEmailAddress|textEmailSubject|textShortMessage|textLongMessage|textPersonName|textPostalAddress|textPassword|textVisiblePassword|textWebEditText|textFilter|textPhonetic|textWebEmailAddress|textWebPassword|phone" />
            <EditText android:textColor="@color/blue_fun_shades" android:textColorHint="@color/blue_fun_shades" android:id="@+id/customer_phone" android:background="@drawable/shadow_white" android:padding="@dimen/margin_10" android:layout_width="match_parent" android:layout_height="wrap_content" android:hint="@string/mobile_number" android:maxLength="10" android:digits="0123456789" android:inputType="text|textCapCharacters|textCapWords|textCapSentences|textAutoCorrect|textAutoComplete|textMultiLine|textImeMultiLine|textNoSuggestions|textUri|textEmailAddress|textEmailSubject|textShortMessage|textLongMessage|textPersonName|textPostalAddress|textPassword|textVisiblePassword|textWebEditText|textFilter|textPhonetic|textWebEmailAddress|textWebPassword|number|numberSigned|numberDecimal|numberPassword|phone" />
            <EditText android:textColor="@color/blue_fun_shades" android:textColorHint="@color/blue_fun_shades" android:id="@+id/customer_UIID" android:background="@drawable/shadow_white" android:padding="@dimen/margin_10" android:layout_width="match_parent" android:layout_height="wrap_content" android:hint="@string/uidai" android:inputType="text|textCapCharacters|textCapWords|textCapSentences|textAutoCorrect|textAutoComplete|textMultiLine|textImeMultiLine|textNoSuggestions|textUri|textEmailAddress|textEmailSubject|textShortMessage|textLongMessage|textPersonName|textPostalAddress|textPassword|textVisiblePassword|textWebEditText|textFilter|textPhonetic|textWebEmailAddress|textWebPassword|phone" />
            <EditText android:textColor="@color/blue_fun_shades" android:textColorHint="@color/blue_fun_shades" android:id="@+id/customer_work" android:background="@drawable/shadow_white" android:padding="@dimen/margin_10" android:layout_width="match_parent" android:layout_height="wrap_content" android:hint="@string/work" android:inputType="text|textCapCharacters|textCapWords|textCapSentences|textAutoCorrect|textAutoComplete|textMultiLine|textImeMultiLine|textNoSuggestions|textUri|textEmailAddress|textEmailSubject|textShortMessage|textLongMessage|textPersonName|textPostalAddress|textPassword|textVisiblePassword|textWebEditText|textFilter|textPhonetic|textWebEmailAddress|textWebPassword|phone" />
            <EditText android:textColor="@color/blue_fun_shades" android:textColorHint="@color/blue_fun_shades" android:id="@+id/customer_address" android:background="@drawable/shadow_white" android:padding="@dimen/margin_10" android:layout_width="match_parent" android:layout_height="wrap_content" android:hint="@string/address" android:inputType="text|textCapCharacters|textCapWords|textCapSentences|textAutoCorrect|textAutoComplete|textMultiLine|textImeMultiLine|textNoSuggestions|textUri|textEmailAddress|textEmailSubject|textShortMessage|textLongMessage|textPersonName|textPostalAddress|textPassword|textVisiblePassword|textWebEditText|textFilter|textPhonetic|textWebEmailAddress|textWebPassword|phone" />
            <EditText android:textColor="@color/blue_fun_shades" android:textColorHint="@color/blue_fun_shades" android:id="@+id/customer_milkQty" android:background="@drawable/shadow_white" android:padding="@dimen/margin_10" android:layout_width="match_parent" android:layout_height="wrap_content" android:hint="@string/qty" android:maxLength="10" android:digits="0123456789" android:inputType="number|numberSigned|numberDecimal|numberPassword|phone" />
            <TextView android:textSize="@dimen/textsize_16" android:textColor="@color/black_medium" android:gravity="top|bottom|left|right|center_vertical|fill_vertical|center_horizontal|fill_horizontal|center|fill|start|end" android:id="@+id/dialog_addMilkBtn" android:background="@drawable/add_milk_drawable" android:padding="@dimen/margin_10" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/margin_10" android:text="@string/add_milk" android:drawableRight="@drawable/drop_down" android:drawableEnd="@drawable/drop_down" />
            <LinearLayout android:orientation="vertical" android:id="@+id/addMilk_linearLayout" android:background="@drawable/add_milk_drawable" android:padding="@dimen/margin_5" android:visibility="gone" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/margin_5" android:layout_marginTop="@dimen/margin_10" android:layout_marginRight="@dimen/margin_5">
                <TextView android:textSize="@dimen/textsize_14" android:textColor="@color/black_medium" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/litre" />
                <Spinner android:entries="@array/litre_arrays" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/margin_5" style="@style/mySpinnerItemStyle" />
                <TextView android:textSize="@dimen/textsize_14" android:textColor="@color/black_medium" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/margin_10" android:text="@string/gram" />
                <Spinner android:entries="@array/litre__in_grams_arrays" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/margin_5" style="@style/mySpinnerItemStyle" />
                <EditText android:textColor="@color/blue_fun_shades" android:textColorHint="@color/blue_fun_shades" android:id="@+id/add_milkQty" android:background="@drawable/shadow_white" android:padding="@dimen/margin_10" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/margin_10" android:hint="@string/qty" android:maxLength="10" android:inputType="number|numberSigned|numberDecimal|numberPassword|phone" />
                <EditText android:textColor="@color/blue_fun_shades" android:textColorHint="@color/blue_fun_shades" android:id="@+id/customer_price" android:background="@drawable/shadow_white" android:padding="@dimen/margin_10" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/margin_10" android:hint="@string/price" android:maxLength="10" android:inputType="number|numberSigned|numberDecimal|numberPassword|phone" />
                <Button android:textSize="@dimen/textsize_16" android:textColor="@drawable/button_text_color" android:id="@+id/addMilk_addBtn" android:background="@color/blue_pelorus" android:padding="@dimen/margin_10" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/margin_20" android:layout_marginBottom="@dimen/margin_20" android:text="@string/add" />
            </LinearLayout>
            <Button android:textSize="@dimen/textsize_16" android:textColor="@drawable/button_text_color" android:id="@+id/customer_cancelBtn" android:background="@color/blue_pelorus" android:padding="@dimen/margin_10" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/margin_20" android:layout_marginBottom="@dimen/margin_20" android:text="@string/cancel" />
        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>
</LinearLayout>
