<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android" android:orientation="vertical" android:background="@color/white" android:layout_width="match_parent" android:layout_height="match_parent">
    <LinearLayout android:orientation="vertical" android:layout_width="match_parent" android:layout_height="wrap_content">
        <TextView android:textSize="@dimen/textsize_16" android:textColor="@color/black_medium" android:gravity="top|bottom|center_vertical|fill_vertical|center|fill" android:id="@+id/hocker_home_profile" android:background="@drawable/home_ripple_effect" android:padding="@dimen/margin_15" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/profile" android:drawableLeft="@mipmap/profile" android:drawableRight="@mipmap/rightarrow" android:drawablePadding="@dimen/margin_10" />
        <View android:background="@color/drak_gray" android:layout_width="match_parent" android:layout_height="UNKNOWN_DATA_0x101" />
        <TextView android:textSize="@dimen/textsize_16" android:textColor="@color/black_medium" android:gravity="top|bottom|center_vertical|fill_vertical|center|fill" android:id="@+id/hocker_home_payNow" android:background="@drawable/home_ripple_effect" android:padding="@dimen/margin_15" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/payNow" android:drawableLeft="@mipmap/pay_now" android:drawableRight="@mipmap/rightarrow" android:drawablePadding="@dimen/margin_10" />
        <View android:background="@color/drak_gray" android:layout_width="match_parent" android:layout_height="UNKNOWN_DATA_0x101" />
        <TextView android:textSize="@dimen/textsize_16" android:textColor="@color/black_medium" android:gravity="top|bottom|center_vertical|fill_vertical|center|fill" android:id="@+id/hocker_home_report" android:background="@drawable/home_ripple_effect" android:padding="@dimen/margin_15" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/report" android:drawableLeft="@mipmap/report" android:drawableRight="@mipmap/rightarrow" android:drawablePadding="@dimen/margin_10" />
        <View android:background="@color/drak_gray" android:layout_width="match_parent" android:layout_height="UNKNOWN_DATA_0x101" />
        <TextView android:textSize="@dimen/textsize_16" android:textColor="@color/black_medium" android:gravity="top|bottom|center_vertical|fill_vertical|center|fill" android:id="@+id/hocker_home_changePassword" android:background="@drawable/home_ripple_effect" android:padding="@dimen/margin_15" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/change_password" android:drawableLeft="@mipmap/chang_password" android:drawableRight="@mipmap/rightarrow" android:drawablePadding="@dimen/margin_10" />
        <View android:background="@color/drak_gray" android:layout_width="match_parent" android:layout_height="UNKNOWN_DATA_0x101" />
        <TextView android:textSize="@dimen/textsize_16" android:textColor="@color/black_medium" android:gravity="top|bottom|center_vertical|fill_vertical|center|fill" android:id="@+id/hocker_home_setting" android:background="@drawable/home_ripple_effect" android:padding="@dimen/margin_15" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/setting" android:drawableLeft="@mipmap/setting" android:drawableRight="@mipmap/rightarrow" android:drawablePadding="@dimen/margin_10" />
        <View android:background="@color/drak_gray" android:layout_width="match_parent" android:layout_height="UNKNOWN_DATA_0x101" />
        <TextView android:textSize="@dimen/textsize_16" android:textColor="@color/black_medium" android:gravity="top|bottom|center_vertical|fill_vertical|center|fill" android:id="@+id/hocker_home_aboutUs" android:background="@drawable/home_ripple_effect" android:padding="@dimen/margin_15" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/about_jain_doodh" android:drawableLeft="@mipmap/about" android:drawableRight="@mipmap/rightarrow" android:drawablePadding="@dimen/margin_10" />
        <View android:background="@color/drak_gray" android:layout_width="match_parent" android:layout_height="UNKNOWN_DATA_0x101" />
        <TextView android:textSize="@dimen/textsize_16" android:textColor="@color/black_medium" android:gravity="top|bottom|center_vertical|fill_vertical|center|fill" android:id="@+id/hocker_home_logout" android:background="@drawable/home_ripple_effect" android:padding="@dimen/margin_15" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/logout" android:drawableLeft="@mipmap/logout" android:drawableRight="@mipmap/rightarrow" android:drawablePadding="@dimen/margin_10" />
        <View android:background="@color/drak_gray" android:layout_width="match_parent" android:layout_height="UNKNOWN_DATA_0x101" />
    </LinearLayout>
</ScrollView>
