<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" android:orientation="vertical" android:background="@color/white" android:layout_width="match_parent" android:layout_height="match_parent" android:minWidth="300dp">
    <TextView android:textSize="@dimen/textsize_18" android:textStyle="UNKNOWN_DATA_0x0" android:textColor="@color/white" android:gravity="top|bottom|left|right|center_vertical|fill_vertical|center_horizontal|fill_horizontal|center|fill|start|end" android:background="@color/blue_pelorus" android:padding="@dimen/margin_15" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/message" />
    <EditText android:textSize="@dimen/textsize_16" android:textColor="@color/blue_fun_shades" android:textColorHint="@color/blue_fun_shades" android:id="@+id/forgot_email" android:background="0x0" android:layout_width="match_parent" android:layout_height="UNKNOWN_DATA_0x2801" android:layout_marginLeft="@dimen/margin_15" android:layout_marginTop="@dimen/margin_20" android:layout_marginRight="@dimen/margin_15" android:hint="@string/email" android:maxLines="1" android:inputType="text|textCapCharacters|textCapWords|textCapSentences|textAutoCorrect|textAutoComplete|textMultiLine|textImeMultiLine|textNoSuggestions|textUri|textEmailAddress|textEmailSubject|textShortMessage|textLongMessage|textPersonName|textPostalAddress|textPassword|textVisiblePassword|textWebEditText|textFilter|textPhonetic|textWebEmailAddress|textWebPassword|phone|time" android:imeOptions="actionGo|actionSearch|actionSend|actionNext|actionDone|actionPrevious" android:textCursorDrawable="@drawable/color_cursor" />
    <View android:background="@color/blue_fun_shades" android:layout_width="match_parent" android:layout_height="UNKNOWN_DATA_0x101" android:layout_marginLeft="@dimen/margin_15" android:layout_marginTop="@dimen/margin_2" android:layout_marginRight="@dimen/margin_15" />
    <Button android:textSize="@dimen/textsize_20" android:textColor="@drawable/button_text_color" android:id="@+id/forgot_done" android:background="@drawable/login_drawable" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/margin_15" android:layout_marginTop="@dimen/margin_25" android:layout_marginRight="@dimen/margin_15" android:text="@string/done" />
    <Button android:textSize="@dimen/textsize_20" android:textColor="@drawable/button_text_color" android:id="@+id/forgot_cancel" android:background="@drawable/login_drawable" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/margin_15" android:layout_marginTop="@dimen/margin_10" android:layout_marginRight="@dimen/margin_15" android:layout_marginBottom="@dimen/margin_15" android:text="@string/cancel" />
</LinearLayout>
