<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res-auto" app:orientation="vertical" app:background="@color/white" app:layout_width="match_parent" app:layout_height="match_parent">
    <ImageView app:layout_gravity="top|bottom|left|right|center_vertical|fill_vertical|center_horizontal|fill_horizontal|center|fill|start|end" app:background="@mipmap/logo_login" app:layout_width="wrap_content" app:layout_height="wrap_content" app:layout_marginTop="@dimen/margin_20" app:contentDescription="@string/app_name" />
    <EditText app:textSize="@dimen/textsize_16" app:textColor="@color/blue_fun_shades" app:textColorHint="@color/blue_fun_shades" app:id="@+id/login_phoneNumber" app:background="0x0" app:padding="@dimen/margin_5" app:layout_width="match_parent" app:layout_height="wrap_content" app:layout_marginLeft="@dimen/margin_15" app:layout_marginTop="@dimen/margin_30" app:layout_marginRight="@dimen/margin_15" app:hint="@string/mobile_number" app:maxLines="1" app:maxLength="10" app:digits="0123456789" app:drawableLeft="@mipmap/phone" app:drawablePadding="@dimen/margin_10" app:inputType="text|textCapCharacters|textCapWords|textCapSentences|textAutoCorrect|textAutoComplete|textMultiLine|textImeMultiLine|textNoSuggestions|textUri|textEmailAddress|textEmailSubject|textShortMessage|textLongMessage|textPersonName|textPostalAddress|textPassword|textVisiblePassword|textWebEditText|textFilter|textPhonetic|textWebEmailAddress|textWebPassword|number|numberSigned|numberDecimal|numberPassword|phone" app:imeOptions="actionNone|actionSearch|actionSend|actionNext|actionDone|actionPrevious" app:textCursorDrawable="@drawable/color_cursor" app:drawableStart="@mipmap/phone" />
    <View app:background="@color/blue_fun_shades" app:layout_width="match_parent" app:layout_height="UNKNOWN_DATA_0x101" app:layout_marginLeft="@dimen/margin_15" app:layout_marginTop="@dimen/margin_2" app:layout_marginRight="@dimen/margin_15" />
    <EditText app:textSize="@dimen/textsize_16" app:textColor="@color/blue_fun_shades" app:textColorHint="@color/blue_fun_shades" app:id="@+id/login_password" app:background="0x0" app:padding="@dimen/margin_5" app:layout_width="match_parent" app:layout_height="wrap_content" app:layout_marginLeft="@dimen/margin_15" app:layout_marginTop="@dimen/margin_20" app:layout_marginRight="@dimen/margin_15" app:hint="@string/password" app:maxLines="1" app:drawableLeft="@mipmap/password" app:drawablePadding="@dimen/margin_10" app:inputType="text|textCapCharacters|textCapWords|textCapSentences|textAutoCorrect|textAutoComplete|textMultiLine|textImeMultiLine|textNoSuggestions|textUri|textEmailAddress|textEmailSubject|textShortMessage|textLongMessage|textPersonName|textPostalAddress|textPassword|textVisiblePassword|textWebEditText|textFilter|textPhonetic|textWebEmailAddress|textWebPassword|phone" app:imeOptions="actionGo|actionSearch|actionSend|actionNext|actionDone|actionPrevious" app:imeActionLabel="Done" app:imeActionId="@integer/login_id" app:textCursorDrawable="@drawable/color_cursor" app:drawableStart="@mipmap/password" />
    <View app:background="@color/blue_fun_shades" app:layout_width="match_parent" app:layout_height="UNKNOWN_DATA_0x101" app:layout_marginLeft="@dimen/margin_15" app:layout_marginTop="@dimen/margin_2" app:layout_marginRight="@dimen/margin_15" />
    <Button app:textSize="@dimen/textsize_20" app:textColor="@drawable/button_text_color" app:id="@+id/login_LogIn" app:background="@drawable/login_drawable" app:layout_width="match_parent" app:layout_height="wrap_content" app:layout_marginLeft="@dimen/margin_15" app:layout_marginTop="@dimen/margin_25" app:layout_marginRight="@dimen/margin_15" app:text="@string/login" />
    <TextView app:textSize="@dimen/textsize_20" app:textColor="@color/blue_fun_shades" app:id="@+id/login_forgotPassword" app:padding="@dimen/margin_10" app:layout_width="wrap_content" app:layout_height="wrap_content" app:layout_marginLeft="@dimen/margin_15" app:layout_marginTop="@dimen/margin_10" app:text="@string/forgot_password" />
</LinearLayout>
